--- a/index.html
+++ b/index.html
@@ -8,10 +8,53 @@
       href="./public/images/favicon-32x32.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
     <title>Article preview component</title>
   </head>
   <body>
-    <div id="app"></div>
+    <main>
+      <h1 class="sr-only">Article preview component</h1>
+      <div class="container">
+        <article class="card">
+          <div class="card-image">
+            <img src="./public/images/drawers.jpg" alt="furniture drawers" />
+          </div>
+          <div class="card-text-container">
+            <h2 class="card-title">
+              Shift the overall look and feel by adding these wonderful touches
+              to furniture in your home
+            </h2>
+            <p class="card-content">
+              Ever been in a room and felt like something was missing? Perhaps
+              it felt slightly bare and uninviting. I’ve got some simple tips to
+              help you make any room feel complete.
+            </p>
+
+            <div class="card-footer-container">
+              <figure>
+                <img
+                  src="./public/images/avatar-michelle.jpg"
+                  alt="Michelle Appleton"
+                />
+                <figcaption>
+                  <p>Michelle Appleton</p>
+                  <time>28 jun 2020</time>
+                </figcaption>
+              </figure>
+              <button>
+                <img src="./public/images/icon-share.svg" alt="share" />
+              </button>
+            </div>
+          </div>
+        </article>
+      </div>
+    </main>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
