--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
           tooltip.style.display = "flex";
           if (mediaQuery.matches) {
             cardFooterContainer.style.background = "hsl(217, 19%, 35%)";
+          } else {
+            cardFooterContainer.style.background = "none";
           }
         }
       }
